--- a/app/package.json
+++ b/app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "test-marking",
   "version": "1.0.0",
-  "description": "GET / Return index.html Contains form with submit button, and reset button",
+  "description": "create report for marking test",
   "main": "index.js",
   "scripts": {
     "app": "node server.js"
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-handlebars": "^5.1.0"
   }
 }
